<resources>
    <string name="app_name">CalisthenicsAppV1</string>
    <string name="title_activity_select_objects">SelectObjectsAct</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Select">Select</string>
    <string name="enter_number_of_required_exercises">Enter Number of Required Exercises:</string>
    <string name="NumOfExercisesEdittextHint">(0-9)</string>
    <string name="display_suggested_time_repetitions_textview">Display Suggested Time / Repetitions?</string>
    <string name="done_RandomDoneButtonResource">Done</string>
    <string name="select_difficulty_Textview">Select Difficulty:</string>
    <string name="custom_routine_Button_Navigation_text">Custom Routine</string>
    <string name="Random_routine_Button_Navigation_Text">Random Routine</string>
    <string name="select_specific_muscle_groups">Select specific muscle groups?</string>
    <string name="select_muscle_groups_Button">Select Muscle Groups</string>
    <string name="select_Muscle_group_Btn_txt">Done</string>
    <string-array name="Difficulty_Spinner_Array">
        <item>Easy</item>
        <item>Easy + Intermediate</item>
        <item>Intermediate</item>
        <item>Intermediate + Advanced</item>
        <item>Advanced</item>
    </string-array>

</resources>
