<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.matt.calisthenicsappv1.Activities.RandomRoutineSettingsAct">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficultyTextview"
            android:text="@string/select_difficulty_Textview"
            android:textColor="#e0ffff"/>


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectDifficultySpinner"
            android:backgroundTint="#b153a7ed"/>
        <!--
        need to insert the drop down list here...
        create a spinner
        create a string array to display the results
        -->

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numOfExercisesTextView"
            android:text="@string/enter_number_of_required_exercises"
            android:textColor="#e0ffff"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numOfExercisesET"
            android:hint="@string/NumOfExercisesEdittextHint"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#e0ffff"
            android:backgroundTint="#b153a7ed"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/QuestionSuggestionsTextview"
            android:text="@string/display_suggested_time_repetitions_textview"
            android:textColor="#e0ffff"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleSuggestionsCB"
            android:buttonTint="#b153a7ed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_specific_muscle_groups"
            android:textColor="#e0ffff"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectMuscleGroupsCB"
            android:buttonTint="#b153a7ed"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/select_muscle_groups_Button"
        android:id="@+id/selectMuscleGroupsBtn"
        android:onClick="selectSpecificMuscleGroupsActSwitch"
        android:enabled="false"
        android:textColor="#e0ffff"
        android:background="#b153a7ed"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done_RandomDoneButtonResource"
        android:onClick="onDoneButtonClick"
        android:id="@+id/RandomSettingsDoneBtn"
        android:textColor="#b153a7ed"/>


</LinearLayout>
</ScrollView>
